# ex-coding-practices

./: README.md  car_class.py  example_ruff.py  knn_class.ipynb  pyproject.toml  ruff.toml
car/: __init__.py  test_car.py
knn/: __init__.py  _utils.py  data.py  knn.py
tests/: test_knn.py
