[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "knn_package"
version = "0.0.1"
description = "A project on good code practices for AI Hub students!"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Nathan Levy"},
]
maintainers = [
    {name = "AI Hub community", email = "aihubadm@weizmann.ac.il"},
]
dependencies = [
    "numpy",
    # for debug logging (referenced from the issue template)
    "session-info",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "twine>=4.0.2",
]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4",
    "sphinx-book-theme>=1.0.0",
    "myst-nb>=1.1.0",
    "sphinxcontrib-bibtex>=1.0.0",
    "setuptools",  # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
    "sphinx-autodoc-typehints",
    "sphinxext-opengraph",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
    "pandas",
]
test = [
    "unittest",
    "coverage",
]

[tool.coverage.run]
source = ["cookiecutter_scverse_instance"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

#If you are using pyproject.toml, you don't need a separate ruff.toml file anymore, you can just use the tool.ruff part here
#please consult https://docs.astral.sh/ruff/configuration/
